# finance-bot

./: .gitignore  TODO  environment.yml  pyproject.toml  setup.cfg
analysis/notebooks/: finance.ipynb
data/: prices.csv  prices.parquet  returns.csv  returns.parquet
python/src/finance/: constant.py
python/src/finance/risk/: asset_manager.py
python/src/finance/tests/loader/: test_loader.py
python/src/finance/tests/trading/: test_factor_model.py
python/src/finance/trading/factor/: benchmark.py  model.py  preprocess.py  proj_grad.py
rust/finance/: Cargo.toml
rust/finance/src/: lib.rs  loader.rs  main.rs
rust/finance/src/loader/: unit_test.rs
rust/finance/src/trading/: factor.rs
rust/finance/src/trading/factor/: benchmark.rs  preprocessor.rs  proj_grad.rs  utils.rs
rust/finance/src/trading/factor/benchmark/: unit_test.rs
rust/finance/src/trading/factor/preprocessor/: unit_test.rs
rust/finance/src/trading/factor/utils/: unit_test.rs
src/finance/: loader.py
src/finance/tests/loader/: test_loader.py
src/finance/tests/trading/: test_factor_model.py
src/finance/trading/factor/: __model.py  benchmark.py  model.py  preprocess.py  proj_grad.py
src/finance/trading/factor_model/: preprocess.py
