[package]
name = "finance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = {version = "0.35.2", features = ["lazy", "csv", "describe", "parquet", "ndarray"]}
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ndarray-linalg = { version = "0.16.0", features = ["openblas-static"] } 
rand_chacha = "0.3.1"